Update framework logging and command handling, and enhance teleportation features
This commit introduces several significant changes, including:
- Refactoring logging mechanisms to use consistent levels across various modules (e.g., `warning` to `warn`, `severe` to `error`).
- Updating command result handling by replacing `CommandResult.success()` with `CommandResult.ok()` for better consistency.
- Introducing new command context and result classes (`CommandContext.java`, `CommandResult.java`, `CommandSender.java`) to standardize command execution and feedback.
- Enhancing the teleportation system with new classes and commands such as `Location.java`, `TeleportResult.java`, `TeleportService.java`, and commands like `/tp`, `/tphere`, `/tppos`, `/home`, `/sethome`, `/delhome`, `/spawn`, `/setspawn`, `/warp`, `/setwarp`, `/delwarp`, `/back`, and `/teleportall`.
- Modifying `MentionService.java` to use a more robust method for accessing the last element in a list.
- Adjusting Java toolchain and compiler settings in `build.gradle.kts` to target Java 19.
- Renaming the `allowed` field to `permitted` in `CooldownResult` and `JoinResult` records and updating associated methods for clarity and to avoid potential naming conflicts.
- Updating Java SDK compatibility in `build.gradle.kts` and `JavaCompile` tasks to use `JavaVersion.VERSION_19`.
- Adding a default `getName()` method to the `Player` interface.
- Implementing numerous minor code adjustments and bug fixes across various files for improved stability and functionality.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 0ade85cf-4642-4b72-93ac-c7ff3426fa3f
Replit-Commit-Checkpoint-Type: intermediate_checkpoint
Replit-Commit-Event-Id: f4702407-cbf1-474f-934a-86b3406cbfab
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/b46ba5a5-086e-49a5-a535-37f214b2b3c5/0ade85cf-4642-4b72-93ac-c7ff3426fa3f/ABZi3rs
Replit-Helium-Checkpoint-Created: true